--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ h2.post-title {
     border-bottom:none;
 }
 
+.post p img{
+    max-width: 100%;
+    height: auto;
+}
+
 .footer{
     padding-bottom: 10px;
     padding-top: 10px;
