--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ h2.post-title {
     height: auto;
 }
 
+.post-pagination{
+    margin-bottom: 50px;
+}
+
 .footer{
     padding-bottom: 10px;
     padding-top: 10px;
