--- a/style.css
+++ b/style.css
@@ -74,3 +74,19 @@ h2.post-title {
 .tags li{
     color: #3D9970;
 }
+
+.page-header{
+    background-position: center;
+    background-size: cover;
+    margin-bottom:30px;
+    padding:170px 0px;
+}
+
+.page-header h1.heading a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.page-header h3.tagline{
+    color: #fff;
+}
