customize header text color and logo

--- a/style.css
+++ b/style.css
@@ -90,3 +90,11 @@ h2.post-title {
 .page-header h3.tagline{
     color: #fff;
 }
+
+.header-logo{
+    margin-top: 50px;
+}
+
+.header-logo img{
+    border-radius: 50px;
+}
